1.15.1 (2019-07-17)
  * Fix erroneous error in 'ci.coords' with 'ret="threshold"' (issue #57)
  * Fix vdiffr unit tests with ggplot2 3.2.0 (issue #53)
  * Keep list order in 'ggroc' (issue #58)

1.15.0 (2019-06-01)
  * 'roc' now prints messages when autodetecting 'levels' and 'direction' by default. Turn off with 'quiet = TRUE' or set these values explicitly
  * Speedup with 'algorithm = 2' (issue #44) and in 'coords' (issue #52)
  * New 'algorithm = 6' (used by default) uses 'algorithm = 2' for numeric data, and 'algorithm = 3' for ordered vectors
  * New 'roc.data.frame' method and 'roc_' function for use in pipelines
  * 'coords' can now returns 'youden' and 'closest.topleft" values (issue #48)
  * New 'transpose' argument for 'coords', TRUE by default (issue #54)
  * Use text instead of Tcl/Tk progress bar by default (issue #51)
  * Fix 'method = "density"' smoothing when called directly from 'roc' (issue #49)
  * Renamed 'roc' argument 'n' to 'smooth.n'
  * Fixed 'are.paired' ignoring smoothing arguments of 'roc2' with 'return.paired.rocs'
  * New 'ret' option "all" in 'coords' (issue #47)
  * 'drop' in 'coords' now drops the dimension of 'ret' too (#issue 43)

1.14.0 (2019-03-12)
  * The 'multiclass.roc' function now accepts multivariate decision values (code contributed by Matthias Döring)
  * 'ggroc' supports multiple aesthetics (issue #42)
  * Make 'ggplot2' dependency optional
  * Suggested packages can be installed interactively when required
  * Passing both 'cases' and 'controls' or 'response' and 'predictor' arguments is now an error
  * Many small bug fixes

1.13.0 (2018-09-23)
  * 'roc' now returns 'NaN' when predictor contains infinite values (issue #30)
  * Better handling of near-ties near +-Infinity and 0
  * 'ggroc' supports aes="group" to allow curves with identical aesthetics

1.12.1 (2018-05-06)
  * Fix a regression causing the allocation of a very large vector (issue #29)

1.12.0 (2018-05-05)