@@ -2,6 +2,7 @@
   * Fix erroneous error in 'ci.coords' with 'ret="threshold"' (issue #57)
   * Fix vdiffr unit tests with ggplot2 3.2.0 (issue #53)
   * Keep list order in 'ggroc' (issue #58)
+  * Fix -Inf threshold in coords for curves with direction = ">" (issue #60)
 
 1.15.0 (2019-06-01)
   * 'roc' now prints messages when autodetecting 'levels' and 'direction' by default. Turn off with 'quiet = TRUE' or set these values explicitly
